﻿drkns 03.01.2015 12:36:25 +0200 - build 4232

1. Рефакторинг.

zg 02.01.2015 13:56:19 +0200 - build 4231

1. 0002896: Присвоить гуид диалогу редактирования фильтра панели.

drkns 30.12.2014 18:01:40 +0200 - build 4230

1. Используем std::regex во внутреннем парсере путей, во избежание.
   Минимальная версия gcc теперь 4.9.

drkns 27.12.2014 15:13:59 +0200 - build 4229

1. 0002845: Wrong Handling of "exclamation marks" in Menu item "!?<title>?<init>!"

zg 26.12.2014 18:50:17 +0200 - build 4228

1. быстрый поиск в панелях не всегда корректно перерисовывался.

drkns 24.12.2014 22:53:03 +0200 - build 4227

1. Продолжение #0002893 - добавлено повышение полномочий.

drkns 22.12.2014 22:53:05 +0200 - build 4226

1. 0002893: Не работает размонтирование iso, vhd, vhdx

svs 22.12.2014 15:31:42 +0300 - build 4225

1. Tree. В диалоге копирования/переноса не работали Shift-F10 и Alt-F10

2. Tree. Видео-артефакты (m_ModalMode с некоторых пор не просто "да/нет", а "0..2").

svs 22.12.2014 13:24:20 +0300 - build 4224

1. Уточнения по TREEFILE_PROJECT (Mantis#0000186)

drkns 21.12.2014 15:02:37 +0200 - build 4223

1. Экспериментально: альтернативное решение проблемы с "open with" в запускателе.

drkns 20.12.2014 14:21:00 +0200 - build 4222

1. Уточнение 4221.

drkns 20.12.2014 14:12:21 +0200 - build 4221

1. Ошибка при импорте настроек.

2. Неудачное сохранение tree3.far при выходе могло приводить к зависанию.

3. Рефакторинг.

zg 18.12.2014 17:04:23 +0200 - build 4220

1. проблемы с файлами, у которых первый символ в имени ゝ.

drkns 16.12.2014 09:27:11 +0200 - build 4219

1. 0002887: Far Manager v3.0 build 4218 x64 (2014-12-16) падает в панелях при нажатии Ctrl-F для получения полного пути

drkns 16.12.2014 00:02:43 +0200 - build 4218

1. И ещё раз.

drkns 15.12.2014 21:16:06 +0200 - build 4217

1. Уточнение 4216.

drkns 15.12.2014 19:31:52 +0200 - build 4216

1. Пара мелочей к 4214.

svs 15.12.2014 13:05:37 +0300 - build 4215

1. Mantis#0002878: Object.CheckHotkey
