@@ -1,4 +1,8 @@
-﻿drkns 03.01.2015 12:36:25 +0200 - build 4232
+﻿drkns 04.01.2015 19:27:27 +0200 - build 4233
+
+1. Рефакторинг.
+
+drkns 03.01.2015 12:36:25 +0200 - build 4232
 
 1. Рефакторинг.
 
